--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,6 @@
 <body>
   <app-root></app-root>
 </body>
-
+<script src="assets/js/JsBarcode.all.min.js"></script>
+<!-- <script src="assets/js/jquery.min.js"></script> -->
 </html>
